--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     document.documentElement.classList.add('js');
   </script>
 
-  <link rel="stylesheet" href="#">
+  <link rel="stylesheet" href="https://unpkg.com/chota@latest">
 
   <title>Ingredient Calculator</title>
 
@@ -359,7 +359,7 @@
       </label>
 
       <span class="feedback">
-      <button id="convert-btn" name="convert_btn" aria-busy="false">
+      <button id="convert-btn" name="convert_btn" class="button primary" aria-busy="false">
         <strong>Convert</strong>
       </button>
     </span>
