--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
   <!--  <meta name="twitter:card" content="summary_large_image"> -->
-  <!--  <meta property="og:url" content="https://www.recipelab.tools">-->
-  <!--  <link rel="canonical" href="https://www.recipelab.tools">-->
+  <meta property="og:url" content="https://recipelab.jakesco.com">
+  <link rel="canonical" href="https://recipelab.jakesco.com">
   <!--  <link rel="icon" href="/favicon.ico">-->
   <!--  <link rel="icon" href="/favicon.svg" type="image/svg+xml">-->
   <!--  <link rel="apple-touch-icon" href="/apple-touch-icon.png">-->
@@ -36,7 +36,7 @@
 
     <article class="card" aria-label="Unit conversion calculator.">
       <header>
-        <h1>Ingredient Calculator</hl>
+        <h2>Mass/Volume Calculator</h2>
       </header>
 
       <form id="convertForm"
@@ -328,14 +328,16 @@
           <option value="Zucchini (shredded)">Zucchini (shredded)</option>
         </select>
 
-        <label for="base-amount"><strong>Convert from:</strong></label>
+        <label for="amount"><strong>Convert from:</strong></label>
         <div class="grid">
-          <input id="base-amount" name="base_amount" type="text" value="8"
-            pattern="^[0-9]*$|^[0-9]*\.[0-9]*$|^[0-9]*\/[0-9]*$" oninvalid="this.setCustomValidity('Please enter a number or fraction.');
-                              this.setAttribute('aria-invalid', 'true');"
-            oninput="this.setCustomValidity(''); this.removeAttribute('aria-invalid');" required>
+          <input id="amount" name="amount" type="text" value="8"
+                 pattern="^[0-9]*$|^[0-9]*\.[0-9]*$|^[0-9]*\/[0-9]*$"
+                 oninvalid="this.setCustomValidity('Please enter a number or fraction.');
+                            this.setAttribute('aria-invalid', 'true');"
+                 oninput="this.setCustomValidity(''); this.removeAttribute('aria-invalid');"
+                 required>
 
-          <select id="base-unit-select" name="base_unit">
+          <select id="fromUnitSelect" name="from_unit">
             <option value="oz" selected>oz</option>
             <option value="gram">gram</option>
             <option value="floz">floz</option>
@@ -346,8 +348,8 @@
         </div>
 
         <div class="grid">
-          <label for="to-unit-select"><strong>Convert to:</strong></label>
-          <select id="to-unit-select" name="to_unit">
+          <label for="toUnitSelect"><strong>Convert to:</strong>
+          <select id="toUnitSelect" name="to_unit">
             <option value="oz" selected>oz</option>
             <option value="gram">gram</option>
             <option value="floz">floz</option>
@@ -355,25 +357,24 @@
             <option value="tsp">tsp</option>
             <option value="tbsp">tbsp</option>
           </select>
+          </label>
 
-          <label for="multiplier"><strong>Multiply by:</strong></label>
-          <input id="multiplier" name="multipler" type="number" min="0.1" step="0.1" value="1" required>
+          <label for="multiplier"><strong>Multiply by:</strong>
+          <input id="multiplier" name="multiplier" type="number" min="0.1" step="0.1" value="1" required>
+          </label>
         </div>
 
         <input type="submit" form="convertForm" value="Convert">
       </form>
 
       <footer>
-        <input id="result" type="text" value="8 Ounce(s)" readonly>
+        <input id="result" type="text" value="-" readonly>
       </footer>
-
     </article>
-
-    </div>
   </main>
+
   <script>
   // fetch goes here
   </script>
 </body>
-
 </html>
